--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						
 				</article >
 				<article style=" position : relative; float : left; left: 10%;">
-					<img src="https://lh3.googleusercontent.com/pw/AIL4fc-3ynGcTO9urAvEhW_B5kgS1Dw06gn8zYuSrL3UnngT9KFEla_QDTJpKnEowSvGqzM0p8ogfWeDxcmr485SN3Lpe26vyyJgFq4cCkYz8a8HlxS4f_iufC05tg9QmzK1_v_xGFyIcdHLaYhA6d0IcmpasBPPb_OcoO-jUDmnRqkxbxThUcSJEB9I0FXvQt9jHy26XnrYy41c5us_GHwI6oETgaUda6R1cz-qqaGKGKx-C1slGjKHTS8JKCKJv4MdFvYRFOuFk94zPnMIoUlvzG_P8XWHP755orCxMxE1_5Uo0SEcD-8uGSJMmtW4GdWSsI7ZxJpo3apbXCD7S7aJ0B6ih0RcPrRhskj_UOnbzEXhdOP2bVD3sws3aw9GEx2nnwGONo0WIciWAJb6jCQlMFFQRzNeCDnQRcvgw-btcozD9Tr0pBaDtCrMaJpXE_l3xcI4iWfxl8nhVC4fC2fjW4SQ1UV0cFrUpDJ39FB0KdvDy2uqOJK0BMyJhHp-As06QQs_5IGcg584M8Pst5A84sKvMU_cp2ksh-71RjNcUWZb8iRbQIKW3xxRI3Mm7ihitdxgteSlFbl5B5PHp1s1aVK5QlQZJQXjzdDd3YnPL2TIF74QzQELXUWTDQXBePlpofbgDdpbtCSRrm2eWCUlt3-Bie4L9hYwkmKKkIt-f3QuFEZ7dGTaiWLc7gXFVFpxOqssSUYD8yZ2vwEVZNEmzxoXfZQkGJGTNvVzaHaqcnaYDh69zCd4BaJqq4UvexwE5Id66EnSLNl_gc3vKoZWeZDXahiVzxnKxyL240BAOqWMvaa3EdXRRPP_U3d-fa5Ob0ujk2Iy5Xc5e3U-KmMfo4WV9BwSwwhYinvzsb2N3UJdwWjm32UatuwMHJstOKq6poa4APoZ04zoshnYPlzSHNN5Tp0QNiR-TLQY8elGtZZ_zNhywk-6aPBJF9SlIA=w343-h611-s-no?authuser=0"width="400px" height="200px" alt=" foto identite mwen">
+					<img src="https://oc-static.imgix.net/prod/images/paths/illustrations/594/16564339214407_DEV_Web_Int_web%20%281%29.png?auto=compress,format&q=80&w=300&dpr=1" width="400px" height="200px" alt=" foto identite mwen">
 				</article>	
 			</section>
 			
